--- a/app/src/main/res/layout/activity_lista_pista.xml
+++ b/app/src/main/res/layout/activity_lista_pista.xml
@@ -1,94 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListaPistaActivity">
 
-  <LinearLayout
-      android:layout_width="0dp"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent">
-
-    <TableRow
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
-      <ImageButton
-          android:id="@+id/iexitPistaButton"
-          android:layout_width="65dp"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="5dp"
-          android:layout_marginLeftStart="10dp"
-          app:srcCompat="@drawable/abc_vector_test" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-      <TextView
-          android:id="@+id/textNombrePista"
-          android:layout_width="match_parent"
-          android:layout_height="51dp"
-          android:gravity="center"
-          android:text="Nombre Pista"
-          android:textSize="30dp" />
+            <Button
+                android:id="@+id/atrasListaPistabutton"
+                android:layout_width="65dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/abc_vector_test"
+                app:backgroundTint="@color/azulOscuro"
+                app:srcCompat="@drawable/abc_vector_test" />
 
-    </TableRow>
+            <TextView
+                android:id="@+id/nombreEstacionTextView"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="51dp"
+                android:text="Nombre Estación"
+                android:textSize="25dp" />
+        </TableRow>
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-      <ImageView
-          android:id="@+id/imageView2"
-          android:layout_width="match_parent"
-          android:layout_height="331dp"
-          android:layout_marginTop="10dp"
-          app:srcCompat="@mipmap/pista_round" />
-    </TableRow>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical" >
 
-      <TextView
-          android:id="@+id/nivelTextView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Nivel: Verde"
-          android:layout_marginTop="30dp"
-          android:layout_marginLeft="60dp"
-          android:textSize="30dp"/>
-    </TableRow>
+                    <Button
+                        android:id="@+id/nombrePista1Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:padding="20dp"
+                        android:text="Nombre Pista #1"
+                        app:backgroundTint="@color/azul" />
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+                    <Button
+                        android:id="@+id/nombrePista2Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:padding="20dp"
+                        android:text="Nombre Pista #2"
+                        app:backgroundTint="@color/azul" />
 
-      <TextView
-          android:id="@+id/longitudTextView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Longitud: 3 KM"
-          android:layout_marginTop="30dp"
-          android:layout_marginLeft="60dp"
-          android:textSize="30dp"/>
-    </TableRow>
+                    <Button
+                        android:id="@+id/nombrePista3Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:padding="20dp"
+                        android:text="Nombre Pista #3"
+                        app:backgroundTint="@color/azul" />
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+                    <Button
+                        android:id="@+id/nombrePista4Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:padding="20dp"
+                        android:text="Nombre Pista #4"
+                        app:backgroundTint="@color/azul" />
 
-      <TextView
-          android:id="@+id/modalidadTextView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Modalidad: Snowboard"
-          android:layout_marginTop="30dp"
-          android:layout_marginLeft="60dp"
-          android:textSize="30dp"/>
-    </TableRow>
+                    <Button
+                        android:id="@+id/nombrePista5Button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="10dp"
+                        android:padding="20dp"
+                        android:text="Nombre Pista #5"
+                        app:backgroundTint="@color/azul" />
 
-  </LinearLayout>
-  </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
+            </ScrollView>
+        </TableRow>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
