--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -20,6 +20,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Freestyle Meeting"
+            android:textColor="@color/AzulOscuro1"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:textSize="30dp"
+            />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/iconsnow"
+            android:layout_marginBottom="10dp"
+            />
+
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -42,11 +62,11 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/cerrrarSesion"
+                android:id="@+id/logOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:backgroundTint="@color/azul"
+                android:backgroundTint="@color/AzulClaro"
                 android:layout_weight="1"
                 android:text="Entrar" />
 
