--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.FreestyleMeeting" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/amarillo</item>
-        <item name="colorPrimaryVariant">@color/ambar</item>
+        <item name="colorPrimary">@color/AzulClaro</item>
+        <item name="colorPrimaryVariant">@color/AzulOscuro2</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/azul</item>
