--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -98,6 +98,15 @@
 
 
         </LinearLayout>
+        <TextView
+            android:id="@+id/enterpriseRegister"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:text="Registrate como empresa"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:textSize="20dp"
+            ></TextView>>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -143,6 +152,7 @@
                     android:src="@drawable/googlelogo"></ImageView>
 
             </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 
