Arreglada la interfaz principal

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
     <ImageView
         android:id="@+id/textBoxNombreEstacion"
         android:layout_width="500dp"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:layout_below="@+id/textInfoNombreEstacion"
         android:src="@drawable/text_box_azuloscuro3"
         android:layout_marginTop="10dp"
@@ -37,17 +37,17 @@
     <TextView
         android:id="@+id/textNombreEstacion"
         android:layout_width="wrap_content"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:layout_below="@+id/textInfoNombreEstacion"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:text="@string/nombreEstacion"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="44sp"
+        android:textSize="36sp"
         android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:layout_marginRight="75dp"
-        android:layout_marginLeft="75dp"/>
+        android:gravity="center"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"/>
 
     <GridLayout
         android:id="@+id/idGrid"
