Lista de estaciones e iniciado DAO estacion

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -140,7 +140,7 @@
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
                         android:background="@color/AzulClaro"
-                        android:text="Solicitar amistad"
+                        android:text="Cerrar sesion"
                         android:textColor="@color/white" />
 
                 </LinearLayout>
