--- a/app/src/main/res/layout/activity_select_estacion.xml
+++ b/app/src/main/res/layout/activity_select_estacion.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SelectEstacionActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+            android:id="@+id/textSeleccionarEstacion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Seleccionar estacion:\n-------------------------"
+            android:textColor="@color/AzulOscuro3"
+            android:textSize="26sp"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="25dp"/>
+
+    <ListView
+        android:id="@+id/idListViewEstaciones"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textSeleccionarEstacion"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp">
+
+
+    </ListView>
+
+</RelativeLayout>
