Registro empresas mediante email

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -53,7 +53,7 @@
             android:orientation ="horizontal">
 
             <Button
-                android:id="@+id/registrarse"
+                android:id="@+id/enviarSolicitud"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
