--- a/app/src/main/res/layout/activity_enterprise_register.xml
+++ b/app/src/main/res/layout/activity_enterprise_register.xml
@@ -33,38 +33,48 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nombre" />
+
+        <EditText
+            android:id="@+id/editTextCif"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="CIF empresa" />
+
         <EditText
             android:id = "@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="Email"/>
+
         <EditText
-            android:id = "@+id/editTextNombreCompleto"
+            android:id="@+id/editTextTelefono"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:hint="CIF empresa"/>
+            android:hint="Telefono" />
+
         <EditText
-            android:id = "@+id/editTextPassword"
+            android:id="@+id/editTextMensaje"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="54dp"
             android:layout_marginTop="20dp"
-            android:inputType="textPassword"
-            android:hint="Contraseña"/>
+            android:hint="Mensaje" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation ="horizontal">
 
             <Button
-                android:id="@+id/registrarse"
+                android:id="@+id/enviarSolicitud"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_redondeado_register"
-                android:text="Registrarse"
+                android:text="Enviar Solicitud"
                 android:textColor="@color/white"
                 app:backgroundTint="@color/azulOscuro" />
 
